# paquito-virtual

./: README.md
camera_viewer/: package.xml  setup.py
camera_viewer/camera_viewer/: viewer_node.py
control_paquito/: package.xml  setup.cfg  setup.py
control_paquito/control_paquito/: ps_control_node.py
control_paquito/launch/: ps_control_launch.py
game_control/: CMakeLists.txt  package.xml
game_control/src/: game_control_node.cpp
move_paquito/: package.xml  setup.cfg  setup.py
move_paquito/launch/: classroombridge.launch.py  controlclassroombridge.launch.py  simplebridge.launch.py
move_paquito/move_paquito/: move_node.py
move_paquito/resource/: simplebridge.yaml
paquito_models/: CMakeLists.txt  package.xml
paquito_models/launch/: simpleworld.launch.py
paquito_models/models/paquito/: bl_wheel.sdf  br_wheel.sdf  fl_wheel.sdf  fr_wheel.sdf  model.sdf  paquito_model.sdf  wheel.sdf
paquito_models/models/paquito/yahboom/: README.md
paquito_models/worlds/: classroom-world.sdf  simple-world.sdf
virtual_paquito/: CMakeLists.txt  package.xml
